--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
     <section class="py-16">
       <div class="container mx-auto px-4">
         <div class="flex justify-between items-center mb-8">
-          <h2 class="text-3xl font-bold">Imp Curtain Wi-Fi Motor</h2>
+          <h2 class="text-3xl font-bold">Imp Kohinoor Motor</h2>
           <a href="CurtainAccessory.html" class="text-secondary hover:text-secondary/80 font-medium flex items-center">
             View All
             <i class="ri-arrow-right-line ml-2"></i>
@@ -703,15 +703,18 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Arabian 1.webp" alt="Arabian 1"
-                      class="w-full h-60 object-contain" />
-                    <button
-                      class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
+                    <img
+                      src="./images/Motor/Imp Kohinoor Motor Electric Track/Imp Kohinoor Motor Electric Track.webp"
+                      alt="Imp Kohinoor Motor Electric Track" class="w-full h-60 object-contain bg-backColor" />
+                    <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
+                      href="./Tracks/imp-m-track-ivory-electro-coating.html">
                       Quick View
-                    </button>
+                    </a>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Kohinoor Curtain Wi-Fi Motor KC72 TV/W 1.2/14 Heavy Duty</h3>
+                    <h3 class="font-medium">
+                      Imp Kohinoor Motor Electric Track
+                    </h3>
                   </div>
                 </div>
               </li>
