--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 </head>
 
 <body class="bg-white min-h-screen">
-  <div id="preloader" class="fixed inset-0 flex flex-col items-center justify-center bg-white z-[999]">
-    <p class="text-2xl font-bold mb-4 animate-pulse text-[#BC8749]">Welcome To</p>
-    <img src="./icons/kohinoor-logo.png" alt="Logo" class="w-40 h-20 animate-pulse">
+   <div id="preloader" class="fixed inset-0 flex flex-col items-center justify-center bg-primary z-[999]">
+    <p class="text-3xl font-bold mb-4 animate-pulse text-[#BC8749]">Welcome To</p>
+    <img src="./icons/kohinoor-logo.png" alt="Logo" class="w-64 h-32 animate-pulse">
   </div>
   <header
     class="fixed w-[98%] justify-between mt-2 left-1/2 -translate-x-1/2 bg-primary backdrop-blur-md shadow-lg z-50 rounded-lg">
