--- a/Tassels.html
+++ b/Tassels.html
@@ -386,7 +386,7 @@
             </h3>
           </div>
         </div>
-        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <!-- <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img loading="lazy" src="./images/TIE BACK/TIE BACK 39.webp" alt="Tassels 39"
             class="w-full h-48 object-contain mb-4" />
           <div>
@@ -394,7 +394,7 @@
               Imp Tassels 39
             </h3>
           </div>
-        </div>
+        </div> -->
         <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img loading="lazy" src="./images/TIE BACK/TIE BACK 40.webp" alt="Tassels 40"
             class="w-full h-48 object-contain mb-4" />
@@ -521,7 +521,7 @@
             </h3>
           </div>
         </div>
-        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <!-- <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img loading="lazy" src="./images/TIE BACK/TIE BACK 54.webp" alt="Tassels 54"
             class="w-full h-48 object-contain mb-4" />
           <div>
@@ -574,7 +574,7 @@
               Imp Tassels 59
             </h3>
           </div>
-        </div>
+        </div> -->
         <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img loading="lazy" src="./images/TIE BACK/TIE BACK 60.webp" alt="Tassels 60"
             class="w-full h-48 object-contain mb-4" />
@@ -1862,7 +1862,7 @@
             </h3>
           </div>
         </div>
-        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <!-- <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img loading="lazy" src="./images/TIE BACK/TIE BACK 203.webp" alt="Tassels 203"
             class="w-full h-48 object-contain mb-4" />
           <div>
@@ -1897,7 +1897,7 @@
               Imp Tassels 206
             </h3>
           </div>
-        </div>
+        </div> -->
         <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img loading="lazy" src="./images/TIE BACK/TIE BACK 207.webp" alt="Tassels 207"
             class="w-full h-48 object-contain mb-4" />
