--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@
     <section class="py-16">
       <div class="container mx-auto px-4">
         <div class="flex justify-between items-center mb-8">
-          <h2 class="text-3xl font-bold">Imp Kohinoor Motor</h2>
-          <a href="CurtainAccessory.html" class="text-secondary hover:text-secondary/80 font-medium flex items-center">
+          <h2 class="text-3xl font-bold">Imp Kohinoor Motor Tracks</h2>
+          <a href="./Tracks/imp-kohinoor-motor-electric-track.html" class="text-secondary hover:text-secondary/80 font-medium flex items-center">
             View All
             <i class="ri-arrow-right-line ml-2"></i>
           </a>
@@ -2273,7 +2273,7 @@
               recommend!"
             </p>
             <div class="flex items-center">
-              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4"></div>
+              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4"><i class="ri-user-line"></i></div>
               <div>
                 <h4 class="font-semibold">Aakash</h4>
                 <p class="text-sm text-gray-500">Interior Designer</p>
@@ -2293,9 +2293,9 @@
               elegance to my living room. Great customer service too!"
             </p>
             <div class="flex items-center">
-              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4"></div>
+              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4"><i class="ri-user-line"></i></div>
               <div>
-                <h4 class="font-semibold">Vikas</h4>
+                <h4 class="font-semibold">Neil</h4>
                 <p class="text-sm text-gray-500">Home Owner</p>
               </div>
             </div>
@@ -2313,7 +2313,7 @@
               heavy curtains. Will definitely order again!"
             </p>
             <div class="flex items-center">
-              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4"></div>
+              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4"><i class="ri-user-line"></i></div>
               <div>
                 <h4 class="font-semibold">Sara</h4>
                 <p class="text-sm text-gray-500">Decorator</p>
@@ -2477,7 +2477,7 @@
           preloader.style.display = "none";
           mainContent.classList.remove("hidden");
         }, 500); // Fade-out transition time
-      }, 2000); // Loader visible for 3 seconds
+      }, 1000); // Loader visible for 3 seconds
     });
     document.addEventListener("DOMContentLoaded", function () {
       // Get all links with hash
