--- a/index.html
+++ b/index.html
@@ -2273,7 +2273,9 @@
               recommend!"
             </p>
             <div class="flex items-center">
-              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4"><i class="ri-user-line"></i></div>
+              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4 flex items-center justify-center">
+                <i class="ri-user-line text-gray-600 text-xl"></i>
+              </div>
               <div>
                 <h4 class="font-semibold">Aakash</h4>
                 <p class="text-sm text-gray-500">Interior Designer</p>
@@ -2293,7 +2295,9 @@
               elegance to my living room. Great customer service too!"
             </p>
             <div class="flex items-center">
-              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4"><i class="ri-user-line"></i></div>
+              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4 flex items-center justify-center">
+                <i class="ri-user-line text-gray-600 text-xl"></i>
+              </div>
               <div>
                 <h4 class="font-semibold">Neil</h4>
                 <p class="text-sm text-gray-500">Home Owner</p>
@@ -2313,7 +2317,9 @@
               heavy curtains. Will definitely order again!"
             </p>
             <div class="flex items-center">
-              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4"><i class="ri-user-line"></i></div>
+              <div class="w-12 h-12 bg-gray-200 rounded-full mr-4 flex items-center justify-center">
+                <i class="ri-user-line text-gray-600 text-xl"></i>
+              </div>
               <div>
                 <h4 class="font-semibold">Sara</h4>
                 <p class="text-sm text-gray-500">Decorator</p>
