--- a/index.html
+++ b/index.html
@@ -2101,7 +2101,7 @@
               </p>
             </div>
             <div class="absolute bottom-0 right-0 w-2/5">
-              <img src="./images/Tassels/Tassels 244.webp" alt="Tassels" class="max-w-30 max-h-20 mix-blend-multiply" />
+              <img src="./images/Tassels/Tassels 266.webp" alt="Tassels" class="max-w-40 mix-blend-multiply" />
             </div>
           </div>
           <div class="relative bg-gray-100 p-5 h-72 flex flex-col justify-between overflow-hidden">
