--- a/Tracks/imp-kohinoor-motor-electric-track.html
+++ b/Tracks/imp-kohinoor-motor-electric-track.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -115,7 +115,8 @@
       </div>
       <div class="w-full md:w-1/3">
         <img src="../images/Motor/Imp Kohinoor Motor Electric Track/Imp Kohinoor Motor Electric Track.webp"
-          alt="Imp Kohinoor Motor Electric Track" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+          alt="Imp Kohinoor Motor Electric Track"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -125,7 +126,7 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Driver Unit 1.webp"
             alt="Imp KC43 Driver Unit 1" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -137,10 +138,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Belt.webp"
-            alt="Imp KC43 Belt" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Belt.webp" alt="Imp KC43 Belt"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
               Imp KC43 Belt
@@ -150,8 +151,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Driver Unit 4.webp"
             alt="Imp KC43 Driver Unit 4" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -163,8 +164,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Track Jointer.webp"
             alt="Imp KC43 Track Jointer" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -176,8 +177,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Driver Unit 3.webp"
             alt="Imp KC43 Driver Unit 3" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -189,8 +190,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Motor Heavy Duty.webp"
             alt="Imp KC43 Motor Heavy Duty" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -202,8 +203,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Driver Unit 2.webp"
             alt="Imp KC43 Driver Unit 2" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -215,8 +216,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Remote and Cover.webp"
             alt="Imp KC43 Remote and Cover" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -228,8 +229,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Motor/Imp Kohinoor Motor Electric Track/parts/Imp KC43 Track Elbow.webp"
             alt="Imp KC43 Track Elbow" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -241,8 +242,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -345,10 +346,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
