--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 
 <body class="bg-white min-h-screen">
-   <div id="preloader" class="fixed inset-0 flex flex-col items-center justify-center bg-primary z-[999]">
+  <div id="preloader" class="fixed inset-0 flex flex-col items-center justify-center bg-primary z-[999]">
     <p class="text-3xl font-bold mb-4 animate-pulse text-[#BC8749]">Welcome To</p>
     <img src="./icons/kohinoor-logo.png" alt="Logo" class="w-64 h-32 animate-pulse">
   </div>
@@ -172,8 +172,8 @@
         <h2 class="text-3xl font-bold text-center mb-12">Shop by Category</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
           <div class="category-card relative rounded-lg overflow-hidden shadow-lg group">
-            <img src="./images/Tracks/Imp M. Track Ivory Electro Coating/Imp M. Track Ivory Electro Coating.webp" alt="Imp 1004 Flexible Track Ivory Electro Coating Hospital Track"
-              class="w-full h-64 object-contain" />
+            <img src="./images/Tracks/Imp M. Track Ivory Electro Coating/Imp M. Track Ivory Electro Coating.webp"
+              alt="Imp 1004 Flexible Track Ivory Electro Coating Hospital Track" class="w-full h-64 object-contain" />
             <div
               class="category-overlay absolute inset-0 bg-primary/60 flex items-center justify-center opacity-0 transition-opacity duration-300">
               <div class="text-center text-white">
@@ -244,8 +244,7 @@
             </div>
           </div>
           <div class="category-card relative rounded-lg overflow-hidden shadow-lg group">
-            <img src="./images/Finials/IMP Aluminium Alpina.webp" alt="Finials"
-              class="w-full h-64 object-cover" />
+            <img src="./images/Finials/IMP Aluminium Alpina.webp" alt="Finials" class="w-full h-64 object-cover" />
             <div
               class="category-overlay absolute inset-0 bg-primary/60 flex items-center justify-center opacity-0 transition-opacity duration-300">
               <div class="text-center text-white">
@@ -692,7 +691,8 @@
       <div class="container mx-auto px-4">
         <div class="flex justify-between items-center mb-8">
           <h2 class="text-3xl font-bold">Imp Kohinoor Motor Tracks</h2>
-          <a href="./Tracks/imp-kohinoor-motor-electric-track.html" class="text-secondary hover:text-secondary/80 font-medium flex items-center">
+          <a href="./Tracks/imp-kohinoor-motor-electric-track.html"
+            class="text-secondary hover:text-secondary/80 font-medium flex items-center">
             View All
             <i class="ri-arrow-right-line ml-2"></i>
           </a>
@@ -703,8 +703,7 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img
-                      src="./images/Motor/Imp Kohinoor Motor Electric Track/Imp Kohinoor Motor Electric Track.webp"
+                    <img src="./images/Motor/Imp Kohinoor Motor Electric Track/Imp Kohinoor Motor Electric Track.webp"
                       alt="Imp Kohinoor Motor Electric Track" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-kohinoor-motor-electric-track.html">
@@ -1539,7 +1538,8 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/IMP Aluminium Alpina.webp" alt="IMP Aluminium Alpina" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Alpina.webp" alt="IMP Aluminium Alpina"
+                      class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
@@ -1553,7 +1553,8 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/IMP Aluminium Corum.webp" alt="IMP Aluminium Corum" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Corum.webp" alt="IMP Aluminium Corum"
+                      class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
@@ -1567,7 +1568,8 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/IMP Aluminium Edox.webp" alt="IMP Aluminium Edox" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Edox.webp" alt="IMP Aluminium Edox"
+                      class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
@@ -1581,7 +1583,8 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/IMP Aluminium Invicta.webp" alt="IMP Aluminium Invicta" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Invicta.webp" alt="IMP Aluminium Invicta"
+                      class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
@@ -1595,7 +1598,8 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/IMP Aluminium Luminox.webp" alt="IMP Aluminium Luminox" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Luminox.webp" alt="IMP Aluminium Luminox"
+                      class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
@@ -1609,7 +1613,8 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/IMP Aluminium Stowa.webp" alt="IMP Aluminium Stowa" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Stowa.webp" alt="IMP Aluminium Stowa"
+                      class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
@@ -1623,7 +1628,8 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/IMP Aluminium Traser.webp" alt="IMP Aluminium Traser" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Traser.webp" alt="IMP Aluminium Traser"
+                      class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
@@ -1637,7 +1643,8 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/IMP Aluminium Zelos.webp" alt="IMP Aluminium Zelos" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Zelos.webp" alt="IMP Aluminium Zelos"
+                      class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
@@ -2368,10 +2375,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
