--- a/Tracks/imp-1032-track-antique.html
+++ b/Tracks/imp-1032-track-antique.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -114,8 +114,8 @@
         </p>
       </div>
       <div class="w-full md:w-1/3">
-        <img src="../images/Tracks/Imp 1032 Track Antique/Imp 1032 Track Antique.webp"
-          alt="Imp 1032 Track Antique" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+        <img src="../images/Tracks/Imp 1032 Track Antique/Imp 1032 Track Antique.webp" alt="Imp 1032 Track Antique"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -125,7 +125,7 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1032 Track Antique/parts/Imp 1032 Track Antique Alu End Clip.webp"
             alt="Imp 1032 Track Antique Alu End Clip" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -137,8 +137,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1032 Track Antique/parts/Imp 1032 Track Antique Bracket Heavy.webp"
             alt="Imp 1032 Track Antique Bracket Heavy" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -150,8 +150,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1032 Track Antique/parts/Imp 1032 Track Antique Ceiling Bracket.webp"
             alt="Imp 1032 Track Antique Ceiling Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -163,8 +163,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1032 Track Antique/parts/Imp 1032 Track Antique Double Ceiling Bracket.webp"
             alt="Imp 1032 Track Antique Double Ceiling Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -176,8 +176,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1032 Track Antique/parts/Imp 1032 Track Antique Runner.webp"
             alt="Imp 1032 Track Antique Runner" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -189,8 +189,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1032 Track Antique/parts/Imp 1032 Track Antique Single Bracket.webp"
             alt="Imp 1032 Track Antique Single Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -202,8 +202,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1032 Track Antique/parts/Imp 1032 Track Antique.webp"
             alt="Imp 1032 Track Antique" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -215,8 +215,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -319,10 +319,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
