--- a/Tracks/imp-1035-track.html
+++ b/Tracks/imp-1035-track.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -114,8 +114,8 @@
         </p>
       </div>
       <div class="w-full md:w-1/3">
-        <img src="../images/Tracks/Imp 1035 Track/Imp 1035 Track.webp"
-          alt="Imp 1035 Track" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+        <img src="../images/Tracks/Imp 1035 Track/Imp 1035 Track.webp" alt="Imp 1035 Track"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -125,9 +125,9 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Double Bracket.webp"
-            alt="Imp 1035 Double Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Double Bracket.webp" alt="Imp 1035 Double Bracket"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
               Imp 1035 Double Bracket
@@ -137,10 +137,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Elbow.webp"
-            alt="Imp 1035 Elbow" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Elbow.webp" alt="Imp 1035 Elbow"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
               Imp 1035 Elbow
@@ -150,10 +150,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 End Cap.webp"
-            alt="Imp 1035 End Cap" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 End Cap.webp" alt="Imp 1035 End Cap"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
               Imp 1035 End Cap
@@ -163,23 +163,23 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Runner .webp"
-            alt="Imp 1035 Runner " class="w-full h-48 object-contain mb-4 bg-backColor" />
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Runner .webp" alt="Imp 1035 Runner "
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
-              Imp 1035 Runner 
+              Imp 1035 Runner
             </h3>
 
             <div class="flex items-center">
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Single Bracket.webp"
-            alt="Imp 1035 Single Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Single Bracket.webp" alt="Imp 1035 Single Bracket"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
               Imp 1035 Single Bracket
@@ -189,10 +189,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Track.webp"
-            alt="Imp 1035 Track" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="../images/Tracks/Imp 1035 Track/parts/Imp 1035 Track.webp" alt="Imp 1035 Track"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
               Imp 1035 Track
@@ -202,8 +202,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -306,10 +306,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
