--- a/Tracks/imp-1041-onset-track-rose-gold.html
+++ b/Tracks/imp-1041-onset-track-rose-gold.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -125,7 +125,7 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Double Wall Bracket 16cm.webp"
             alt="Imp 1041 Double Wall Bracket 16cm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -137,8 +137,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Single Wall Bracket 16cm.webp"
             alt="Imp 1041 Single Wall Bracket 16cm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -150,8 +150,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Single Wall Bracket 8 Cm.webp"
             alt="Imp 1041 Single Wall Bracket 8 Cm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -163,8 +163,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Adjustable Connector.webp"
             alt="Imp 1041 Track Adjustable Connector" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -176,8 +176,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Alu End Cap.webp"
             alt="Imp 1041 Track Alu End Cap" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -189,9 +189,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Ceiling Suspension Bracket 20mm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Ceiling Suspension Bracket 20mm.webp"
             alt="Imp 1041 Track Ceiling Suspension Bracket 20mm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -202,9 +203,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Ceiling Suspension Bracket 28mm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Ceiling Suspension Bracket 28mm.webp"
             alt="Imp 1041 Track Ceiling Suspension Bracket 28mm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -215,8 +217,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Corner Connector.webp"
             alt="Imp 1041 Track Corner Connector" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -228,8 +230,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Jointer Connector.webp"
             alt="Imp 1041 Track Jointer Connector" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -241,8 +243,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Rose Gold.webp"
             alt="Imp 1041 Track Rose Gold" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -254,8 +256,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Runner..webp"
             alt="Imp 1041 Track Runner." class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -267,8 +269,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Single Ceiling Bracket.webp"
             alt="Imp 1041 Track Single Ceiling Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -280,8 +282,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1041 Onset Track Rose Gold/parts/Imp 1041 Track Wall To Wall Consil.webp"
             alt="Imp 1041 Track Wall To Wall Consil" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -293,8 +295,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -397,10 +399,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
