--- a/Tracks/imp-1042-powerfull-track-black-wallnut.html
+++ b/Tracks/imp-1042-powerfull-track-black-wallnut.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -115,7 +115,8 @@
       </div>
       <div class="w-full md:w-1/3">
         <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/Imp 1042 Powerfull Track Walnut.webp"
-          alt="Imp 1042 Powerfull Track Walnut" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+          alt="Imp 1042 Powerfull Track Walnut"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -125,8 +126,9 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Double Wall Bracket 16cm.webp"
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Double Wall Bracket 16cm.webp"
             alt="Imp 1042 Double Wall Bracket 16cm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -137,8 +139,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Powerfull Track.webp"
             alt="Imp 1042 Powerfull Track" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -150,9 +152,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Single Wall Bracket 16cm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Single Wall Bracket 16cm.webp"
             alt="Imp 1042 Single Wall Bracket 16cm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -163,9 +166,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Single Wall Bracket 8 Cm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Single Wall Bracket 8 Cm.webp"
             alt="Imp 1042 Single Wall Bracket 8 Cm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -176,9 +180,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Adjustable Connector.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Adjustable Connector.webp"
             alt="Imp 1042 Track Adjustable Connector" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -189,8 +194,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Alu End Cap.webp"
             alt="Imp 1042 Track Alu End Cap" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -202,9 +207,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Ceiling Suspension Bracket 20mm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Ceiling Suspension Bracket 20mm.webp"
             alt="Imp 1042 Track Ceiling Suspension Bracket 20mm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -215,9 +221,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Ceiling Suspension Bracket 28mm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Ceiling Suspension Bracket 28mm.webp"
             alt="Imp 1042 Track Ceiling Suspension Bracket 28mm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -228,8 +235,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Corner Connector.webp"
             alt="Imp 1042 Track Corner Connector" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -241,8 +248,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Jointer Connector.webp"
             alt="Imp 1042 Track Jointer Connector" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -254,8 +261,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Runner.webp"
             alt="Imp 1042 Track Runner" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -267,9 +274,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Single Ceiling Bracket.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Single Ceiling Bracket.webp"
             alt="Imp 1042 Track Single Ceiling Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -280,9 +288,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Wall To Wall Consil.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1042 Powerfull Track Black Wallnut/parts/Imp 1042 Track Wall To Wall Consil.webp"
             alt="Imp 1042 Track Wall To Wall Consil" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -293,8 +302,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -397,10 +406,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
