--- a/Tracks/imp-1045-palmet-double-and-single-track-white.html
+++ b/Tracks/imp-1045-palmet-double-and-single-track-white.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -114,8 +114,10 @@
         </p>
       </div>
       <div class="w-full md:w-1/3">
-        <img src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/Imp 1045 Palmet Double & Single Track White.webp"
-          alt="Imp 1045 Palmet Double & Single Track White" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+        <img
+          src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/Imp 1045 Palmet Double & Single Track White.webp"
+          alt="Imp 1045 Palmet Double & Single Track White"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -125,8 +127,9 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Palmet Ceiling Track White.webp"
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Palmet Ceiling Track White.webp"
             alt="Imp 1045 Palmet Ceiling Track White" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -137,9 +140,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Palmet Front Track White.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Palmet Front Track White.webp"
             alt="Imp 1045 Palmet Front Track White" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -150,9 +154,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Track Double Wall Bracket.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Track Double Wall Bracket.webp"
             alt="Imp 1045 Track Double Wall Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -163,8 +168,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Track L Start.webp"
             alt="Imp 1045 Track L Start" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -176,8 +181,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Track Runner.webp"
             alt="Imp 1045 Track Runner" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -189,9 +194,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Track Side Jointer.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Track Side Jointer.webp"
             alt="Imp 1045 Track Side Jointer" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -202,9 +208,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Track Single Wall Bracket.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Track Single Wall Bracket.webp"
             alt="Imp 1045 Track Single Wall Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -215,8 +222,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1045 Palmet Double And Single Track White/parts/Imp 1045 Track Velcro.webp"
             alt="Imp 1045 Track Velcro" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -228,8 +235,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -332,10 +339,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
