--- a/Tracks/imp-1048-verizone-track-rose-gold.html
+++ b/Tracks/imp-1048-verizone-track-rose-gold.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -115,7 +115,8 @@
       </div>
       <div class="w-full md:w-1/3">
         <img src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/Imp 1048 Verizon Track Rose Gold.webp"
-          alt="Imp 1048 Verizon Track Rose Gold" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+          alt="Imp 1048 Verizon Track Rose Gold"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -125,8 +126,9 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Double Ceiling Bracket (Heavy).webp"
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Double Ceiling Bracket (Heavy).webp"
             alt="Imp 1048 Track Double Ceiling Bracket (Heavy)" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -137,9 +139,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Double Wall Bracket (Heavy).webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Double Wall Bracket (Heavy).webp"
             alt="Imp 1048 Track Double Wall Bracket (Heavy)" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -150,8 +153,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track End Cap (Heavy).webp"
             alt="Imp 1048 Track End Cap (Heavy)" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -163,8 +166,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Integra Rose Gold.webp"
             alt="Imp 1048 Track Integra Rose Gold" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -176,8 +179,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Runner (Heavy).webp"
             alt="Imp 1048 Track Runner (Heavy)" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -189,9 +192,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Single Ceiling Bracket (Heavy).webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Single Ceiling Bracket (Heavy).webp"
             alt="Imp 1048 Track Single Ceiling Bracket (Heavy)" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -202,9 +206,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Single Wall Bracket (Heavy).webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1048 Verizone Track Rose Gold/parts/Imp 1048 Track Single Wall Bracket (Heavy).webp"
             alt="Imp 1048 Track Single Wall Bracket (Heavy)" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -215,8 +220,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -319,10 +324,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
