--- a/Tracks/imp-1051-track.html
+++ b/Tracks/imp-1051-track.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -114,8 +114,8 @@
         </p>
       </div>
       <div class="w-full md:w-1/3">
-        <img src="../images/Tracks/Imp 1051 Track/Imp 1051 Track.webp"
-          alt="Imp 1051 Track" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+        <img src="../images/Tracks/Imp 1051 Track/Imp 1051 Track.webp" alt="Imp 1051 Track"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -125,7 +125,7 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-          </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -228,10 +228,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
