--- a/Tracks/imp-1052-modify-track-white.html
+++ b/Tracks/imp-1052-modify-track-white.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -125,7 +125,7 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1052 Modify Track White/parts/Imp 1052 Track Double Ceiling Bracket.webp"
             alt="Imp 1052 Track Double Ceiling Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -137,8 +137,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1052 Modify Track White/parts/Imp 1052 Track Double Wall Bracket.webp"
             alt="Imp 1052 Track Double Wall Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -150,8 +150,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1052 Modify Track White/parts/Imp 1052 Track End Cap.webp"
             alt="Imp 1052 Track End Cap" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -163,8 +163,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1052 Modify Track White/parts/Imp 1052 Track Runner.webp"
             alt="Imp 1052 Track Runner" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -176,8 +176,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1052 Modify Track White/parts/Imp 1052 Track Single Ceiling Bracket.webp"
             alt="Imp 1052 Track Single Ceiling Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -189,8 +189,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1052 Modify Track White/parts/Imp 1052 Track Single Wall Bracket.webp"
             alt="Imp 1052 Track Single Wall Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -202,8 +202,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1052 Modify Track White/parts/Imp 1052 Track White.webp"
             alt="Imp 1052 Track White" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -215,8 +215,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -319,10 +319,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
