--- a/Tracks/imp-1054-powerfull-track-zelkova.html
+++ b/Tracks/imp-1054-powerfull-track-zelkova.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -115,7 +115,8 @@
       </div>
       <div class="w-full md:w-1/3">
         <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/Imp 1054 Powerfull Track Zelkova.webp"
-          alt="Imp 1054 Powerfull Track Zelkova" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+          alt="Imp 1054 Powerfull Track Zelkova"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -125,7 +126,7 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Double Wall Bracket 16cm.webp"
             alt="Imp 1054 Double Wall Bracket 16cm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -137,8 +138,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Single Wall Bracket 16cm.webp"
             alt="Imp 1054 Single Wall Bracket 16cm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -150,8 +151,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Single Wall Bracket 8 Cm.webp"
             alt="Imp 1054 Single Wall Bracket 8 Cm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -163,8 +164,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Adjustable Connector.webp"
             alt="Imp 1054 Track Adjustable Connector" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -176,8 +177,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Alu End Cap.webp"
             alt="Imp 1054 Track Alu End Cap" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -189,9 +190,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Ceiling Suspension Bracket 20mm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Ceiling Suspension Bracket 20mm.webp"
             alt="Imp 1054 Track Ceiling Suspension Bracket 20mm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -202,9 +204,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Ceiling Suspension Bracket 28mm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Ceiling Suspension Bracket 28mm.webp"
             alt="Imp 1054 Track Ceiling Suspension Bracket 28mm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -215,8 +218,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Corner Connector.webp"
             alt="Imp 1054 Track Corner Connector" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -228,8 +231,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Jointer Connector.webp"
             alt="Imp 1054 Track Jointer Connector" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -241,8 +244,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Runner.webp"
             alt="Imp 1054 Track Runner" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -254,8 +257,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Single Ceiling Bracket.webp"
             alt="Imp 1054 Track Single Ceiling Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -267,8 +270,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Starter Scrow.webp"
             alt="Imp 1054 Track Starter Scrow" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -280,8 +283,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1054 Powerfull Track Zelkova/parts/Imp 1054 Track Zelkova.webp"
             alt="Imp 1054 Track Zelkova" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -293,8 +296,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -397,10 +400,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
