--- a/Tracks/imp-1058-allu-track-white.html
+++ b/Tracks/imp-1058-allu-track-white.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -125,9 +125,9 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1058 Allu Track White/parts/Imp 1058 Allu Track.webp"
-            alt="Imp 1058 Allu Track" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="../images/Tracks/Imp 1058 Allu Track White/parts/Imp 1058 Allu Track.webp" alt="Imp 1058 Allu Track"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
               Imp 1058 Allu Track
@@ -137,8 +137,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1058 Allu Track White/parts/Imp 1058 Track Allu End Cap.webp"
             alt="Imp 1058 Track Allu End Cap" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -150,8 +150,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1058 Allu Track White/parts/Imp 1058 Track Ceiling Bracket.webp"
             alt="Imp 1058 Track Ceiling Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -163,8 +163,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1058 Allu Track White/parts/Imp 1058 Track Double Ceiling Bracket.webp"
             alt="Imp 1058 Track Double Ceiling Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -176,8 +176,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1058 Allu Track White/parts/Imp 1058 Track Jointer.webp"
             alt="Imp 1058 Track Jointer" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -189,8 +189,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1058 Allu Track White/parts/Imp 1058 Track Runner.webp"
             alt="Imp 1058 Track Runner" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -202,8 +202,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1058 Allu Track White/parts/Imp 1058 Track Single Wall Bracket.webp"
             alt="Imp 1058 Track Single Wall Bracket" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -215,8 +215,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp 1058 Allu Track White/parts/Imp 1058 Track Wall To Wall.webp"
             alt="Imp 1058 Track Wall To Wall" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -228,8 +228,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -332,10 +332,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
