--- a/Tracks/imp-1059-curtain-without-stiching-roman-new-track.html
+++ b/Tracks/imp-1059-curtain-without-stiching-roman-new-track.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -114,8 +114,10 @@
         </p>
       </div>
       <div class="w-full md:w-1/3">
-        <img src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/Imp 1059 Curtain Without Stitching Roman New Track.webp"
-          alt="Imp 1059 Curtain Without Stitching Roman New Track" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+        <img
+          src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/Imp 1059 Curtain Without Stitching Roman New Track.webp"
+          alt="Imp 1059 Curtain Without Stitching Roman New Track"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -125,8 +127,9 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Curtain Without Stitching Track.webp"
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Curtain Without Stitching Track.webp"
             alt="Imp 1059 Curtain Without Stitching Track" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -137,9 +140,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Track End Cap.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Track End Cap.webp"
             alt="Imp 1059 Track End Cap" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -150,9 +154,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Track Locking.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Track Locking.webp"
             alt="Imp 1059 Track Locking" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -163,9 +168,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Track Stick 3mm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Track Stick 3mm.webp"
             alt="Imp 1059 Track Stick 3mm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -176,9 +182,10 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Track Stick 4mm.webp"
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/parts/Imp 1059 Track Stick 4mm.webp"
             alt="Imp 1059 Track Stick 4mm" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -189,8 +196,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -293,10 +300,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
