--- a/Tracks/imp-led-square-track-white.html
+++ b/Tracks/imp-led-square-track-white.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -125,7 +125,7 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp Led Square Track White/parts/Imp Led Half Round Track End Cap.webp"
             alt="Imp Led Half Round Track End Cap" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -137,8 +137,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp Led Square Track White/parts/Imp Led Half Round Track Remote And Adapter.webp"
             alt="Imp Led Half Round Track Remote And Adapter" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -150,8 +150,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp Led Square Track White/parts/Imp Led Half Round Track Runner.webp"
             alt="Imp Led Half Round Track Runner" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -163,10 +163,12 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp Led Square Track White/parts/Imp Led Half Round Track Single Ceiling Bracket (Heavy) White.webp"
-            alt="Imp Led Half Round Track Single Ceiling Bracket (Heavy) White" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp Led Square Track White/parts/Imp Led Half Round Track Single Ceiling Bracket (Heavy) White.webp"
+            alt="Imp Led Half Round Track Single Ceiling Bracket (Heavy) White"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
               Imp Led Half Round Track Single Ceiling Bracket (Heavy) White
@@ -176,10 +178,12 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/Imp Led Square Track White/parts/Imp Led Half Round Track Single Wall Bracket (Heavy) White.webp"
-            alt="Imp Led Half Round Track Single Wall Bracket (Heavy) White" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img
+            src="../images/Tracks/Imp Led Square Track White/parts/Imp Led Half Round Track Single Wall Bracket (Heavy) White.webp"
+            alt="Imp Led Half Round Track Single Wall Bracket (Heavy) White"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
               Imp Led Half Round Track Single Wall Bracket (Heavy) White
@@ -189,21 +193,21 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp Led Square Track White/parts/Imp Led Square Track .webp"
             alt="Imp Led Square Track " class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
-              Imp Led Square Track 
+              Imp Led Square Track
             </h3>
 
             <div class="flex items-center">
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="../images/Tracks/Imp Led Square Track White/parts/Imp Led Square Track Led Strip Light.webp"
             alt="Imp Led Square Track Led Strip Light" class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
@@ -215,8 +219,8 @@
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> 
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -319,10 +323,12 @@
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
